--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^5.3.5",
     "date-fns": "^2.29.3",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
     "mrz": "^4.2.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
