--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
+    "redux-persist": "^6.0.0",
     "tesseract.js": "^6.0.1",
     "use-deep-compare-effect": "^1.8.1",
     "web-vitals": "^2.1.4",
