--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
     "redux-persist": "^6.0.0",
     "tesseract.js": "^6.0.1",
@@ -36,7 +35,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "webpack-cli": "^6.0.1"
+    "@vitejs/plugin-react": "^5.0.2",
+    "vite": "^7.1.5"
   }
 }
